[package]
name = "gossipers"
version = "0.1.0"
edition = "2018"
autors = ["Golubev Matvei <golubevmt@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.39", features = ["tcp-tokio"]}
structopt = "0.3"
tokio = {version = "1.10", features = ["full"]}
log = "0.4"
pretty_env_logger = "0.4"